dms/cfn/DMSWorkshop.yaml
##### current repo code 2/12

# AWS Database Migration Workshop
# Last Updated on May 20, 2021 by hoomanh@
# updated June 2022 - davegard@amazon.com
#    updating oracle source snapshot to 19c, changed RDP security group to 127.0.0.1, & added secret mgr for db Password
# Jan-2023 fixed dms subnets & updates from reinvent2022

AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation Template for AWS Database Migration Workshop.

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Database Migration Workshop Lab Environment"
        Parameters:
          - LabType
      - Label:
          default: "Amazon EC2 Configuration"
        Parameters:
          - EC2ServerInstanceType
          - KeyName
      - Label:
          default: "Target Amazon RDS Database Configuration"
        Parameters:
          - RDSInstanceType
      - Label:
          default: "Network Configuration"
        Parameters:
          - VpcCIDR

Mappings:
  RegionMap: # 20 Regions
    us-east-1: # Virginia
      "EC2AMI": "ami-03682cbe3aba12927" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:us-east-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-us-east-1"
    us-east-2: # Ohio
      "EC2AMI": "ami-083d84d1b53340b9d" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:us-east-2:833997227572:snapshot:dms-lab-oracle-source-sept2022-us-east-2"
    us-west-2: # Oregon
      "EC2AMI": "ami-03693ba72dc02b388" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:us-west-2:833997227572:snapshot:dms-lab-oracle-source-sept2022-us-west-2"
    af-south-1: # Cape Town [NO AMD]
      "EC2AMI": "ami-06b8a1b56d1ee1741" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:af-south-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-af-south-1"
    ap-east-1: # Hong Kong [NO AMD]
      "EC2AMI": "ami-05497e7987c6c162a" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-east-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-east-1"
    ap-south-1: # Mumbai
      "EC2AMI": "ami-05b5700bfbbd3ff1b" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-south-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-south-1"
    ap-northeast-3: # Osaka [NO AMD]
      "EC2AMI": "ami-0a183533e54c9c538" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-northeast-3:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-northeast-3"
    ap-northeast-2: # Seoul
      "EC2AMI": "ami-0e6f29e7dcc938b67" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-northeast-2:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-northeast-2"
    ap-southeast-1: # Singapore
      "EC2AMI": "ami-01a60e6c41f658d2c" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-southeast-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-southeast-1"
    ap-southeast-2: # Sydney
      "EC2AMI": "ami-0ed88efdc0a63aa05" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-southeast-2:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-southeast-2"
    ap-northeast-1: # Tokyo
      "EC2AMI": "ami-000c9e3c215cb94bb" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ap-northeast-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-ap-northeast-1"
    ca-central-1: # Canada
      "EC2AMI": "ami-0e8fb1647124528c8" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:ca-central-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-ca-central-1"
    eu-central-1: # Frankfurt
      "EC2AMI": "ami-03036a83de1124b5e" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:eu-central-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-eu-central-1"
    eu-west-1: # Ireland
      "EC2AMI": "ami-05ff3536cca06c530" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:eu-west-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-eu-west-1"
    eu-west-2: # London
      "EC2AMI": "ami-0511412a16fde520d" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:eu-west-2:833997227572:snapshot:dms-lab-oracle-source-sept2022-eu-west-2"
    eu-south-1: # Milan
      "EC2AMI": "ami-0a52ffa5383fdf176" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:eu-south-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-eu-south-1"
    eu-west-3: # Paris
      "EC2AMI": "ami-0d61574c241c22a9f" # Updated  snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:eu-west-3:833997227572:snapshot:dms-lab-oracle-source-sept2022-eu-west-3"
    eu-north-1: # Stockholm [NO AMD]
      "EC2AMI": "ami-0e1e14ca5aad3f5ed" # Updated snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:eu-north-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-eu-north-1"
    me-south-1: # Bahrain [NO AMD]
      "EC2AMI": "ami-0a3ba20d88f9980a4" # Updated snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:me-south-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-me-south-1"
    sa-east-1: # Sao Paulo
      "EC2AMI": "ami-083026c2d95369054" # Updated snapshot June 10, 2022 ec2 from Feb 2020
      "OracleSnapshotId": "arn:aws:rds:sa-east-1:833997227572:snapshot:dms-lab-oracle-source-sept2022-sa-east-1"

Parameters:
  LabType:
    Description: "Select your Database Migration lab:"
    Type: String

    AllowedValues:
      - "Microsoft SQL Server to Amazon Aurora (MySQL)"
      - "Microsoft SQL Server to Amazon Aurora (PostgreSQL)"
      - "Microsoft SQL Server to Amazon RDS SQL Server"
      - "Microsoft SQL Server to Amazon S3"
      - "Oracle to Amazon Aurora (PostgreSQL)"
      - "Oracle to Amazon RDS Oracle"
    ConstraintDescription: Must select a lab environment from the options.
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable RDP access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

  VpcCIDR:
    Description: Enter the VPC CIDR range in the form x.x.x.x/16.
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/16.
    Default: 10.20.0.0/16
  IAMRoleDmsVpcExist:
    Description: Does your AWS account already have dms-vpc-role(goto IAM>roles & search for "dms-vpc" to check) if this role is not there template will fail-rollback unless you change default Y to N?
    Type: String
    Default: Y
    AllowedValues:
      - Y
      - N
  EC2ServerInstanceType:
    Description: Amazon EC2 Instance Type
    Type: String
    Default: m5.xlarge
    AllowedValues:
      - m5.large
      - m5.xlarge
      - m5.2xlarge
      - m5.4xlarge
      - m5a.large
      - m5a.xlarge
      - m5a.2xlarge
      - m5a.4xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
  RDSInstanceType:
    Description: Amazon RDS Aurora Instance Type
    Type: String
    Default: db.r5.xlarge
    AllowedValues:
      - db.r5.large
      - db.r5.xlarge
      - db.r5.2xlarge
      - db.r5.4xlarge
    ConstraintDescription: Must be a valid Amazon RDS instance type.

Conditions:
  Create-SQLServer-to-AuroraMySQL-Environment:
    !Equals [!Ref LabType, "Microsoft SQL Server to Amazon Aurora (MySQL)"]
  Create-SQLServer-to-RDSSQLServer-Environment:
    !Equals [!Ref LabType, "Microsoft SQL Server to Amazon RDS SQL Server"]
  Create-SQLServer-to-AuroraPostgreSQL-Environment:
    !Equals [!Ref LabType, "Microsoft SQL Server to Amazon Aurora (PostgreSQL)"]
  Create-SQLServer-to-S3-Environment:
    !Equals [!Ref LabType, "Microsoft SQL Server to Amazon S3"]
  Create-Oracle-to-AuroraPostgreSQL-Environment:
    !Equals [!Ref LabType, "Oracle to Amazon Aurora (PostgreSQL)"]
  Create-Oracle-to-RDSOracle-Environment:
    !Equals [!Ref LabType, "Oracle to Amazon RDS Oracle"]
  Create-Oracle-Environment:
    !Or [
      !Equals [!Ref LabType, "Oracle to Amazon Aurora (PostgreSQL)"],
      !Equals [!Ref LabType, "Oracle to Amazon RDS Oracle"],
    ]
  IAMRoleDmsVpcExist: !Equals [!Ref IAMRoleDmsVpcExist, "N"]

Resources:
  DmsVpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock:
        Ref: VpcCIDR
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - DmsVpc
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DmsVpc
      CidrBlock: !Select [0, !Cidr [!GetAtt DmsVpc.CidrBlock, 3, 8]]
      AvailabilityZone: !Select [0, !GetAZs ]
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - Subnet1
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DmsVpc
      CidrBlock: !Select [1, !Cidr [!GetAtt DmsVpc.CidrBlock, 3, 8]]
      AvailabilityZone: !Select [1, !GetAZs ]
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - Subnet2
  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref DmsVpc
      CidrBlock: !Select [2, !Cidr [!GetAtt DmsVpc.CidrBlock, 3, 8]]
      AvailabilityZone: !Select [2, !GetAZs ]
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - Subnet3
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets available for the DMS Lab
      SubnetIds:
        - Ref: Subnet1
        - Ref: Subnet2
        - Ref: Subnet3
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DmsVpc
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DmsVpc
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - RouteTable
  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable
  Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteTable
  Subnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet3
      RouteTableId: !Ref RouteTable
  S3GatewayEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
              - "s3:DeleteObject"
              - "s3:PutObjectTagging"
              - "s3:ListBucket"
            Resource:
              - "arn:aws:s3:::*"
            Condition:
              StringEquals:
                aws:sourceVpc: !Ref DmsVpc

      RouteTableIds:
        - !Ref RouteTable
      #        - !Ref routetableB
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
      VpcId: !Ref DmsVpc
  DMSVpcRole:
    Type: AWS::IAM::Role
    Condition: IAMRoleDmsVpcExist
    Properties:
      RoleName: dms-vpc-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - dms.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonDMSVPCManagementRole
      Path: "/"

  AllInstanceIdsAssociation:
    Type: AWS::SSM::Association
    Properties:
      AssociationName: UpdateSSMAgent
      Name: AWS-UpdateSSMAgent
      ScheduleExpression: cron(0 2 ? * SUN *)
      Targets:
        - Key: InstanceIds
          Values:
            - "*"
      WaitForSuccessTimeoutSeconds: 300
  Ec2SsmIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ["sts:AssumeRole"]
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  Ec2SsmInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [!Ref Ec2SsmIamRole]

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref EC2ServerInstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref Ec2SsmInstanceProfile
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - EC2Instance
      BlockDeviceMappings:
        - DeviceName: "/dev/sda1"
          Ebs:
            DeleteOnTermination: "true"
            Iops: "2000"
            VolumeSize: "250"
            VolumeType: io1
      ImageId:
        Fn::FindInMap:
          - RegionMap
          - !Ref AWS::Region
          - EC2AMI
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeleteOnTermination: "true"
          DeviceIndex: 0
          SubnetId: !Ref Subnet2
          GroupSet:
            - Ref: InstanceSecurityGroup
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - InstanceSecurityGroup
      GroupDescription: Enable RDP access via port 3389
      VpcId: !Ref DmsVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "3389"
          ToPort: "3389"
          CidrIp: 127.0.0.1/32
          Description: Allows RDP access to EC2 Instance
        - IpProtocol: tcp
          FromPort: "1521"
          ToPort: "1521"
          CidrIp: !Ref VpcCIDR
          Description: Allows Amazon RDS Oracle Access
        - IpProtocol: tcp
          FromPort: "5432"
          ToPort: "5432"
          CidrIp: !Ref VpcCIDR
          Description: Allows Amazon RDS Aurora (PostgreSQL) Access
        - IpProtocol: tcp
          FromPort: "1433"
          ToPort: "1433"
          CidrIp: !Ref VpcCIDR
          Description: Allows SQL Server Access
        - IpProtocol: tcp
          FromPort: "3306"
          ToPort: "3306"
          CidrIp: !Ref VpcCIDR
          Description: Allows Amazon RDS Aurora (MySQL) Access

  ReplicationInstanceSubnetGroup:
    Type: AWS::DMS::ReplicationSubnetGroup
    Properties:
      ReplicationSubnetGroupDescription: !Sub "${AWS::StackName} DMS Subnet Group"
      ReplicationSubnetGroupIdentifier: !Sub "${AWS::StackName}-dms-subnet-group"
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet2
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-dms-subnet-group"

  DMSDBSecret:
    Type: "AWS::SecretsManager::Secret"
    Properties:
      Name:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - DMSDBSecret
      Description: This secret has a hardcoded password in SecretString
      SecretString: '{"username":"dbmaster","password":"dbmaster123","SQLServerMySQLusername":"awssct","SQLServerMySQLpassword":"Password1"}'
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - DMSDBSecret

  SourceOracleDB:
    Condition: Create-Oracle-Environment
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - SourceOracleDB
      DBName: "OracleDB"
      AllocatedStorage: "400"
      StorageType: gp2
      MasterUsername: "dbmaster"
      MasterUserPassword: "dbmaster123"
      DBInstanceClass: !Ref RDSInstanceType
      Engine: oracle-ee
      EngineVersion: "19.0.0.0.ru-2022-04.rur-2022-04.r1"
      LicenseModel: bring-your-own-license
      PubliclyAccessible: false
      AvailabilityZone:
        Fn::GetAtt:
          - Subnet2
          - AvailabilityZone
      MultiAZ: false
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      VPCSecurityGroups:
        - Fn::GetAtt:
            - OracleSourceSecurityGroup
            - GroupId
      DBSnapshotIdentifier:
        Fn::FindInMap:
          - RegionMap
          - !Ref AWS::Region
          - OracleSnapshotId
      DBInstanceIdentifier:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - SourceOracleDB
  OracleSourceSecurityGroup:
    Condition: Create-Oracle-Environment
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - OracleSourceSecurityGroup
      GroupDescription: Security group for Source Oracle Instance.
      VpcId: !Ref DmsVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "1521"
          ToPort: "1521"
          CidrIp: !Ref VpcCIDR
          Description: Allows Amazon RDS Oracle Access
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - RDSSecurityGroup
      VpcId: !Ref DmsVpc
      GroupDescription: Amazon Aurora RDS Security Group.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "5432"
          ToPort: "5432"
          CidrIp: !Ref VpcCIDR
          Description: Allows Amazon RDS Aurora (PostgreSQL) Access
        - IpProtocol: tcp
          FromPort: "3306"
          ToPort: "3306"
          CidrIp: !Ref VpcCIDR
          Description: Allows Amazon RDS Aurora (MySQL) Access
        - IpProtocol: tcp
          FromPort: "1433"
          ToPort: "1433"
          CidrIp: !Ref VpcCIDR
          Description: Allows Microsoft SQL Server Access
        - IpProtocol: tcp
          FromPort: "1521"
          ToPort: "1521"
          CidrIp: !Ref VpcCIDR
          Description: Allows Oracle Access
  AuroraPostgresqlCluster:
    Condition: Create-Oracle-to-AuroraPostgreSQL-Environment
    Type: AWS::RDS::DBCluster
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraPostgresqlCluster
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - RDSSecurityGroup
            - GroupId
      DatabaseName: "AuroraDB"
      Engine: aurora-postgresql
      EngineVersion: "13.7"
      DBClusterParameterGroupName: default.aurora-postgresql13
      MasterUsername: "dbmaster"
      MasterUserPassword: "dbmaster123"
      Port: "5432"
      BackupRetentionPeriod: "1"
    DependsOn: RDSSecurityGroup
  AuroraPostgresqlInstance:
    Condition: Create-Oracle-to-AuroraPostgreSQL-Environment
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraPostgresqlInstance
      DBClusterIdentifier:
        Ref: AuroraPostgresqlCluster
      DBInstanceIdentifier:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - AuroraPostgreSQLInstance
      Engine: aurora-postgresql
      EngineVersion: "13.7"
      DBParameterGroupName: default.aurora-postgresql13
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      AutoMinorVersionUpgrade: "true"
      CopyTagsToSnapshot: "true"
      DBInstanceClass: !Ref RDSInstanceType
      PubliclyAccessible: "false"
  AuroraPostgresqlCluster2:
    Condition: Create-SQLServer-to-AuroraPostgreSQL-Environment
    Type: AWS::RDS::DBCluster
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraPostgresqlCluster2
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - RDSSecurityGroup
            - GroupId
      DatabaseName: "AuroraDB"
      Engine: aurora-postgresql
      EngineVersion: "13.7"
      DBClusterParameterGroupName: default.aurora-postgresql13
      MasterUsername: "dbmaster"
      MasterUserPassword: "dbmaster123"
      Port: "5432"
      BackupRetentionPeriod: "1"
    DependsOn: RDSSecurityGroup
  AuroraPostgresqlInstance2:
    Condition: Create-SQLServer-to-AuroraPostgreSQL-Environment
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraPostgresqlInstance2
      DBClusterIdentifier:
        Ref: AuroraPostgresqlCluster2
      DBInstanceIdentifier:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - AuroraPostgreSQLInstance2
      Engine: aurora-postgresql
      EngineVersion: "13.7"
      DBParameterGroupName: default.aurora-postgresql13
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      AutoMinorVersionUpgrade: "true"
      CopyTagsToSnapshot: "true"
      DBInstanceClass: !Ref RDSInstanceType
      PubliclyAccessible: "false"
  AuroraMySQLCluster:
    Condition: Create-SQLServer-to-AuroraMySQL-Environment
    Type: AWS::RDS::DBCluster
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraMySQLCluster
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - RDSSecurityGroup
            - GroupId
      DatabaseName: AuroraMySQL
      Engine: aurora-mysql
      EngineVersion: 5.7.mysql_aurora.2.07.4
      MasterUsername: awssct
      MasterUserPassword: Password1
    DependsOn: RDSSecurityGroup
  AuroraMySQLInstance:
    Condition: Create-SQLServer-to-AuroraMySQL-Environment
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraMySQLInstance
      DBClusterIdentifier:
        Ref: AuroraMySQLCluster
      DBInstanceIdentifier:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - AuroraMySQLInstance
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      DBInstanceClass: !Ref RDSInstanceType
      Engine: aurora-mysql
      EngineVersion: 5.7.mysql_aurora.2.07.4
      LicenseModel: general-public-license
      PubliclyAccessible: "false"
  TargetSQLServer:
    Condition: Create-SQLServer-to-RDSSQLServer-Environment
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - AuroraMySQLInstance
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      VPCSecurityGroups:
        - Fn::GetAtt:
            - RDSSecurityGroup
            - GroupId
      DBInstanceIdentifier:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - TargetSQLServer
      LicenseModel: license-included
      Engine: sqlserver-se
      EngineVersion: 15.00.4073.23.v1
      DBInstanceClass: !Ref RDSInstanceType
      AllocatedStorage: "100"
      Iops: "2000"
      MasterUsername: awssct
      MasterUserPassword: Password1
      PubliclyAccessible: "false"
      BackupRetentionPeriod: "0"
    DependsOn: RDSSecurityGroup
  TargetOracleDB:
    Condition: Create-Oracle-to-RDSOracle-Environment
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - "-"
              - - Ref: AWS::StackName
                - TargetOracleDB
      DBName: "TargetDB"
      AllocatedStorage: "400"
      StorageType: gp2
      MasterUsername: "dbmaster"
      MasterUserPassword: "dbmaster123"
      DBInstanceClass: !Ref RDSInstanceType
      Engine: oracle-ee
      EngineVersion: "19.0.0.0.ru-2022-04.rur-2022-04.r1"
      LicenseModel: bring-your-own-license
      PubliclyAccessible: false
      AvailabilityZone:
        Fn::GetAtt:
          - Subnet2
          - AvailabilityZone
      MultiAZ: false
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      VPCSecurityGroups:
        - Fn::GetAtt:
            - RDSSecurityGroup
            - GroupId
      DBInstanceIdentifier:
        Fn::Join:
          - "-"
          - - Ref: AWS::StackName
            - TargetOracleDB

Outputs:
  DMSDBSecretU:
    Description: DB Username
    Value: dbmaster
  DMSDBSecretP:
    Description: DB Pwd
    Value: dbmaster123
  DMSDBSecretUSQLSERVER:
    Description: DB Username SQL Server & MySQL
    Value: awssct
  DMSDBSecretPSQLSERVER:
    Description: DB Pwd SQL Server & MySQL
    Value: Password1

  SourceEC2PublicDNS:
    Description: Public DNS enpoint for the EC2 instance
    Value:
      Fn::GetAtt:
        - EC2Instance
        - PublicDnsName
  SourceEC2PrivateDNS:
    Description: Private DNS endpoint for the EC2 instance
    Value:
      Fn::GetAtt:
        - EC2Instance
        - PrivateDnsName
  SourceOracleEndpoint:
    Condition: Create-Oracle-Environment
    Description: Source Oracle RDS Endpoint
    Value:
      Fn::GetAtt:
        - SourceOracleDB
        - Endpoint.Address
  TargetAuroraPostgreSQLEndpoint:
    Condition: Create-Oracle-to-AuroraPostgreSQL-Environment
    Description: Target Aurora (PostgreSQL) Database Endpoint
    Value:
      Fn::GetAtt:
        - AuroraPostgresqlCluster
        - Endpoint.Address
  YourTargetAuroraPostgreSQLEndpoint:
    Condition: Create-SQLServer-to-AuroraPostgreSQL-Environment
    Description: Target Aurora (PostgreSQL) Database Endpoint
    Value:
      Fn::GetAtt:
        - AuroraPostgresqlCluster2
        - Endpoint.Address
  TargetAuroraMySQLEndpoint:
    Condition: Create-SQLServer-to-AuroraMySQL-Environment
    Description: Target Aurora (MySQL) Database Endpoint
    Value:
      Fn::GetAtt:
        - AuroraMySQLInstance
        - Endpoint.Address
  TargetSQLServerEndpoint:
    Condition: Create-SQLServer-to-RDSSQLServer-Environment
    Description: Target MS SQL Server RDS Endpoint
    Value:
      Fn::GetAtt:
        - TargetSQLServer
        - Endpoint.Address
  TargetOracleEndpoint:
    Condition: Create-Oracle-to-RDSOracle-Environment
    Description: Target Oracle RDS Instance Endpoint
    Value:
      Fn::GetAtt:
        - TargetOracleDB
        - Endpoint.Address
